# matrix-rs

./: Cargo.toml
src/: lib.rs  main.rs  snake.rs  tests.rs
