[package]
name = "matrix-rs"
version = "0.1.0"
authors = ["biuld <xboltk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.15.0"
rand = "0.7.3"

[[bin]]
name = "bin"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"